test/compile_errors/stage1/obj/deref_on_undefined_value.zig
comptime {
    var a: *u8 = undefined;
    _ = a.*;
}

// deref on undefined value
//
// tmp.zig:3:9: error: attempt to dereference undefined value
